--- a/pom.xml
+++ b/pom.xml
@@ -811,51 +811,51 @@
 			</plugin>
 			
 			<!-- tomcat6插件 -->
-			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat6-maven-plugin</artifactId>
-				<version>${tomcat.version}</version> 
-				<configuration>
-					<port>${webserver.port}</port>
-					<path>/${project.artifactId}</path>
-					<uriEncoding>${project.build.sourceEncoding}</uriEncoding>
-				</configuration>
-			</plugin>
+			<!--<plugin>-->
+				<!--<groupId>org.apache.tomcat.maven</groupId>-->
+				<!--<artifactId>tomcat6-maven-plugin</artifactId>-->
+				<!--<version>${tomcat.version}</version> -->
+				<!--<configuration>-->
+					<!--<port>${webserver.port}</port>-->
+					<!--<path>/${project.artifactId}</path>-->
+					<!--<uriEncoding>${project.build.sourceEncoding}</uriEncoding>-->
+				<!--</configuration>-->
+			<!--</plugin>-->
 			
 			<!-- tomcat7插件 -->
-			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>${tomcat.version}</version> 
-				<configuration>
-					<port>${webserver.port}</port>
-					<path>/${project.artifactId}</path>
-					<uriEncoding>${project.build.sourceEncoding}</uriEncoding>
-				</configuration>
-			</plugin>
+			<!--<plugin>-->
+				<!--<groupId>org.apache.tomcat.maven</groupId>-->
+				<!--<artifactId>tomcat7-maven-plugin</artifactId>-->
+				<!--<version>${tomcat.version}</version> -->
+				<!--<configuration>-->
+					<!--<port>${webserver.port}</port>-->
+					<!--<path>/${project.artifactId}</path>-->
+					<!--<uriEncoding>${project.build.sourceEncoding}</uriEncoding>-->
+				<!--</configuration>-->
+			<!--</plugin>-->
 			
 			<!-- jetty插件 -->
-			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<version>${jetty.version}</version>
-				<configuration>
-					<connectors>
-						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-							<port>${webserver.port}</port>
-						</connector>
-					</connectors>
-					<webAppConfig>
-						<contextPath>/${project.artifactId}</contextPath>
-					</webAppConfig>
-					<systemProperties>  
-						<systemProperty>
-							<name>org.mortbay.util.URI.charset</name>
-							<value>${project.build.sourceEncoding}</value>
-						</systemProperty>
-					</systemProperties>
-				</configuration>
-			</plugin>
+			<!--<plugin>-->
+				<!--<groupId>org.mortbay.jetty</groupId>-->
+				<!--<artifactId>jetty-maven-plugin</artifactId>-->
+				<!--<version>${jetty.version}</version>-->
+				<!--<configuration>-->
+					<!--<connectors>-->
+						<!--<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">-->
+							<!--<port>${webserver.port}</port>-->
+						<!--</connector>-->
+					<!--</connectors>-->
+					<!--<webAppConfig>-->
+						<!--<contextPath>/${project.artifactId}</contextPath>-->
+					<!--</webAppConfig>-->
+					<!--<systemProperties>  -->
+						<!--<systemProperty>-->
+							<!--<name>org.mortbay.util.URI.charset</name>-->
+							<!--<value>${project.build.sourceEncoding}</value>-->
+						<!--</systemProperty>-->
+					<!--</systemProperties>-->
+				<!--</configuration>-->
+			<!--</plugin>-->
 			
 			<!-- resource插件 -->
 			<plugin>
@@ -894,84 +894,84 @@
 		</plugins>
 	</build>
 	
-	<profiles>
-		<!-- 初始化数据库 -->			
-		<profile>
-			<id>init-db</id>
-			<dependencies>
-				<dependency>
-					<groupId>org.dbunit</groupId>
-					<artifactId>dbunit</artifactId>
-					<version>2.4.8</version>
-				</dependency>
-			  	<dependency>
-				    <groupId>org.apache.poi</groupId>
-				    <artifactId>poi</artifactId>
-				    <version>3.2-FINAL</version>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-antrun-plugin</artifactId>
-						<version>1.7</version>
-						<configuration>
-							<target>
-								
-								<!-- mysql -->
-								<property name="dbunit.datatype" value="org.dbunit.ext.mysql.MySqlDataTypeFactory" />
-								
-								<!-- mssql
-								<property name="dbunit.datatype" value="org.dbunit.ext.mssql.MsSqlDataTypeFactory" /> -->
-								
-								<!-- oracle
-								<property name="dbunit.datatype" value="org.dbunit.ext.oracle.Oracle10DataTypeFactory" /> -->
-								
-								<property file="src/main/resources/jeesite.properties" />
-								<sql driver="${jdbc.driver}" url="${jdbc.url}" userid="${jdbc.username}" password="${jdbc.password}" 
-									onerror="continue" encoding="${project.build.sourceEncoding}">
-									<classpath refid="maven.test.classpath" />
-									<transaction src="db/sys/jeesite_${jdbc.type}.sql"/>
-									<transaction src="db/cms/jeesite_${jdbc.type}.sql"/>
-									<transaction src="db/oa/jeesite_${jdbc.type}.sql"/>
-									<transaction src="db/gen/jeesite_${jdbc.type}.sql"/>
-									<transaction src="db/gen/example_${jdbc.type}.sql"/>
-									<transaction src="db/test/jeesite_${jdbc.type}.sql"/>
-									<transaction src="db/act/drop/activiti.${jdbc.type}.drop.engine.sql"/>
-									<transaction src="db/act/drop/activiti.${jdbc.type}.drop.history.sql"/>
-									<transaction src="db/act/drop/activiti.${jdbc.type}.drop.identity.sql"/>
-									<transaction src="db/act/create/activiti.${jdbc.type}.create.engine.sql"/>
-									<transaction src="db/act/create/activiti.${jdbc.type}.create.history.sql"/>
-									<transaction src="db/act/create/activiti.${jdbc.type}.create.identity.sql"/>
-								</sql>
-								
-								<taskdef name="dbunit" classname="org.dbunit.ant.DbUnitTask" classpathref="maven.test.classpath" />
-								
-								<!-- mysql、mssql -->
-								<dbunit driver="${jdbc.driver}" url="${jdbc.url}" userid="${jdbc.username}"
-									 password="${jdbc.password}">
-								
-								<!-- oracle
-								<dbunit driver="${jdbc.driver}" url="${jdbc.url}" userid="${jdbc.username}"
-									password="${jdbc.password}" schema="${jdbc.username}" > -->
-									
-									<dbconfig>
-										<property name="datatypeFactory" value="${dbunit.datatype}" />
-									</dbconfig>
-									<classpath refid="maven.test.classpath" />
-									<operation type="INSERT" src="db/sys/jeesite_data.xls" format="xls" transaction="true"/>
-									<operation type="INSERT" src="db/cms/jeesite_data.xls" format="xls" transaction="true"/>
-									
-								</dbunit>
-								
-							</target>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+	<!--<profiles>-->
+		<!--&lt;!&ndash; 初始化数据库 &ndash;&gt;-->
+		<!--<profile>-->
+			<!--<id>init-db</id>-->
+			<!--<dependencies>-->
+				<!--<dependency>-->
+					<!--<groupId>org.dbunit</groupId>-->
+					<!--<artifactId>dbunit</artifactId>-->
+					<!--<version>2.4.8</version>-->
+				<!--</dependency>-->
+			  	<!--<dependency>-->
+				    <!--<groupId>org.apache.poi</groupId>-->
+				    <!--<artifactId>poi</artifactId>-->
+				    <!--<version>3.2-FINAL</version>-->
+				<!--</dependency>-->
+			<!--</dependencies>-->
+			<!--<build>-->
+				<!--<plugins>-->
+					<!--<plugin>-->
+						<!--<groupId>org.apache.maven.plugins</groupId>-->
+						<!--<artifactId>maven-antrun-plugin</artifactId>-->
+						<!--<version>1.7</version>-->
+						<!--<configuration>-->
+							<!--<target>-->
+
+								<!--&lt;!&ndash; mysql &ndash;&gt;-->
+								<!--<property name="dbunit.datatype" value="org.dbunit.ext.mysql.MySqlDataTypeFactory" />-->
+
+								<!--&lt;!&ndash; mssql-->
+								<!--<property name="dbunit.datatype" value="org.dbunit.ext.mssql.MsSqlDataTypeFactory" /> &ndash;&gt;-->
+
+								<!--&lt;!&ndash; oracle-->
+								<!--<property name="dbunit.datatype" value="org.dbunit.ext.oracle.Oracle10DataTypeFactory" /> &ndash;&gt;-->
+
+								<!--<property file="src/main/resources/jeesite.properties" />-->
+								<!--<sql driver="${jdbc.driver}" url="${jdbc.url}" userid="${jdbc.username}" password="${jdbc.password}"-->
+									<!--onerror="continue" encoding="${project.build.sourceEncoding}">-->
+									<!--<classpath refid="maven.test.classpath" />-->
+									<!--<transaction src="db/sys/jeesite_${jdbc.type}.sql"/>-->
+									<!--<transaction src="db/cms/jeesite_${jdbc.type}.sql"/>-->
+									<!--<transaction src="db/oa/jeesite_${jdbc.type}.sql"/>-->
+									<!--<transaction src="db/gen/jeesite_${jdbc.type}.sql"/>-->
+									<!--<transaction src="db/gen/example_${jdbc.type}.sql"/>-->
+									<!--<transaction src="db/test/jeesite_${jdbc.type}.sql"/>-->
+									<!--<transaction src="db/act/drop/activiti.${jdbc.type}.drop.engine.sql"/>-->
+									<!--<transaction src="db/act/drop/activiti.${jdbc.type}.drop.history.sql"/>-->
+									<!--<transaction src="db/act/drop/activiti.${jdbc.type}.drop.identity.sql"/>-->
+									<!--<transaction src="db/act/create/activiti.${jdbc.type}.create.engine.sql"/>-->
+									<!--<transaction src="db/act/create/activiti.${jdbc.type}.create.history.sql"/>-->
+									<!--<transaction src="db/act/create/activiti.${jdbc.type}.create.identity.sql"/>-->
+								<!--</sql>-->
+
+								<!--<taskdef name="dbunit" classname="org.dbunit.ant.DbUnitTask" classpathref="maven.test.classpath" />-->
+
+								<!--&lt;!&ndash; mysql、mssql &ndash;&gt;-->
+								<!--<dbunit driver="${jdbc.driver}" url="${jdbc.url}" userid="${jdbc.username}"-->
+									 <!--password="${jdbc.password}">-->
+
+								<!--&lt;!&ndash; oracle-->
+								<!--<dbunit driver="${jdbc.driver}" url="${jdbc.url}" userid="${jdbc.username}"-->
+									<!--password="${jdbc.password}" schema="${jdbc.username}" > &ndash;&gt;-->
+
+									<!--<dbconfig>-->
+										<!--<property name="datatypeFactory" value="${dbunit.datatype}" />-->
+									<!--</dbconfig>-->
+									<!--<classpath refid="maven.test.classpath" />-->
+									<!--<operation type="INSERT" src="db/sys/jeesite_data.xls" format="xls" transaction="true"/>-->
+									<!--<operation type="INSERT" src="db/cms/jeesite_data.xls" format="xls" transaction="true"/>-->
+
+								<!--</dbunit>-->
+
+							<!--</target>-->
+						<!--</configuration>-->
+					<!--</plugin>-->
+				<!--</plugins>-->
+			<!--</build>-->
+		<!--</profile>-->
+	<!--</profiles>-->
 	
 	<!-- 开发者信息 -->
 	<developers>  
