--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -12,9 +12,9 @@
 #mysql database setting
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/jeesite?useUnicode=true&characterEncoding=utf-8
-jdbc.username=root
-jdbc.password=123456
+jdbc.url=jdbc:mysql://35.200.81.59:3306/jeesite3?useUnicode=true&characterEncoding=utf-8
+jdbc.username=devuser1
+jdbc.password=devuser1
 
 #mssql database settings
 #jdbc.type=mssql
